...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radiogroup_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ordenar"
            android:padding="10dp"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radiobutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maior_preco" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menor_preco" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radiobutton3"
...
            android:text="@string/menor_preco_tempo" />

    </RadioGroup>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAplicarOrdenacao"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
...
