...
        app:stl_clickable="true"
        app:stl_titleOffset="24dp"
        app:stl_drawDecorationAfterTab="false"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/smartTabLayout"
        />

    </LinearLayout>
...
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_filter_list_24dp"
                android:onClick="abrirTelaFiltro"
                android:text="FILTRAR" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnOrdenar"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_sort_24dp"
                android:onClick="abrirTelaOrdenar"
                android:text="ORDENAR" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>


...
